	PR c++/43108 	* typeck.c (cp_build_binary_op): Adapt mixed complex/non handling from 	C build_binary_op. 	* cp-tree.h (WANT_VECTOR_OR_COMPLEX): Rename from WANT_VECTOR. 	* cvt.c (build_expr_type_conversion): Allow COMPLEX_TYPE.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@156874 138bc75d-0d04-0410-961f-82ee72b054a4