gcc/testsuite/c-c++-common/complex-sign-mixed-sub.c
@@ -1,7 +1,7 @@
 /* Test complex arithmetic with signed zeros.  Mixed real/complex
    subtraction.  */
 /* { dg-do run } */
-/* { dg-options "-std=gnu99" } */
+/* { dg-options "-std=gnu99" { target c } } */
 
 #include "complex-sign.h"
 
